# portfolio-api

./: README.md  ccompose.yaml  compose.yaml  package-lock.json  schema.cql
api/: Cargo.toml
api/src/: github_stats.rs  main.rs
app/: package-lock.json  package.json
backend/: Cargo.toml  Dockerfile
backend/src/: github_stats.rs  main.rs
backend/src/db/: global_messages.rs  mod.rs
db/: .gitignore  Dockerfile  entrypoint.sh  schema.cql
db/data/data/system/compaction_history-b4dbb7b4dc493fb5b3bfce6e434832ca/: nb-10-big-CompressionInfo.db  nb-10-big-Data.db  nb-10-big-Digest.crc32  nb-10-big-Filter.db  nb-10-big-Index.db  nb-10-big-Statistics.db  nb-10-big-Summary.db
db/data/data/system/local-7ad54392bcdd35a684174e047860b377/: nb-46-big-CompressionInfo.db  nb-46-big-Data.db  nb-46-big-Digest.crc32  nb-46-big-Statistics.db
db/data/data/system/sstable_activity-5a1ff267ace03f128563cfae6103c65e/: nb-10-big-Data.db  nb-10-big-Digest.crc32  nb-10-big-Filter.db  nb-10-big-Index.db  nb-10-big-Statistics.db
db/data/data/system/sstable_activity_v2-62efe31f3be8310c8d298963439c1288/: nb-10-big-Data.db  nb-10-big-Digest.crc32  nb-10-big-Filter.db  nb-10-big-Index.db  (+1 more)
webapp/: package-lock.json  package.json  tailwind.config.ts
webapp/public/test_jsons/: langs.json
webapp/src/app/: aos.tsx  default.tsx  globals.css  layout.tsx  page.tsx
webapp/src/components/: background.tsx  email_form.tsx  familiar_technologies.tsx  social_media.tsx  tech_card.tsx  tech_section_label.tsx  typing_text.tsx
webapp/src/components/stats/: lang_chart.tsx  lang_label.tsx
(+48 files in other folders)
