[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.82"
dotenvy = "0.15.7"
futures = "0.3.30"
octocrab = "0.38.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = {version="1.37.0", features = ["rt-multi-thread", "macros"]}
